--- a/client/views/myInfo.ejs
+++ b/client/views/myInfo.ejs
@@ -22,6 +22,10 @@
         <table class="table table-striped">
             <tr>
                 <th class="mdb-color indigo darken-4 text-white">ID</th>
+                <td><%= userInfo.userId %></td>
+            </tr>
+            <tr>
+                <th class="mdb-color indigo darken-4 text-white">AccountAddress</th>
                 <td><%= userInfo.userAddress %></td>
             </tr>
             <tr>
