--- a/client/views/registerProject.ejs
+++ b/client/views/registerProject.ejs
@@ -29,10 +29,10 @@
         </div>
         <div class="row">
             <div class="col-4 text-right">
-                <label for="employeeAddress">Employee Address</label>
+                <label for="employeeUserId">Employee User ID</label>
             </div>
             <div class="col-8">
-                <input type="text" name="employeeAddress" class="form-control" id="employeeAddress" >
+                <input type="text" name="employeeUserId" class="form-control" id="employeeUserId" >
             </div>
         </div>
         <div class="row">
